# LLM-Agents-for-Search

AVATAR/: design.md
AgentQ/: .agent.md  README.md  guide.md  main.py  original.md  pyproject.toml  requirements.txt  run_agentq_tests.py  test_patch.py  test_structured_output.py
AgentQ/agentq/: __init__.py  agent.py  graph.py  llm_utils.py  models.py  nodes.py  playwright_helper.py  prompt.py  prompt_utils.py  restaurant_agent.py  skills.py  state.py  tools.py  web_selectors.py
AgentQ/scripts/: setup_chrome.sh  stop_chrome.sh
AgentQ/test/: agentq_test_runner.py
AgentQ/test/tasks/: demo_tasks.json
CodeAct/: design.md
CodeNav/: design.md
InferenceTimeTreeSearch/: .agent.md  .env.example  README.md  graph.py  guide.webshop.md  llm_utils.py  main.py  nodes.py  prompt.py  prompt_utils.py  pyproject.toml  replay.py  state.py  tools.py
InferenceTimeTreeSearch/scripts/: run_dev.sh
KnowAgent/: .env.example  README.md  graph.py  llm_utils.py  main.py  nodes.py  prompt.py  prompt_utils.py  pyproject.toml  state.py  tools.py
LASER/: .env.example  .gitignore  README.md  graph.py  llm_utils.py  main.py  nodes.py  parsing_utils.py  prompt.py  prompt_utils.py  pyproject.toml  replay.py  requirements.txt  state.py  tool_specs.py  tools.py  webshop_demonstrations_0-100.json
LASER/docs/: langgraph_basic_search_result.md  laser_agent_dev_guide.md  laser_langgraph_llm_prompts.md  laser_post_implementation_guide.md  laser_prompt_reference.md  offline_replay_harness.md
PaSa/: Readme.md
PersonaRAG/: Readme.md  persona_rag_langgraph_guide.md
easytool/: design.md
(+2 files in other folders)
