[project]
name = "agentq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "black>=24.0.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "ollama>=0.5.3",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.6.0",
    "typing-extensions>=4.8.0",
]
